# bloodytools

./: .dockerignore  .gitignore  .gitmodules  .style.yapf  .travis.yml  Dockerfile  README.md  custom_demon_hunter_havoc.txt  custom_druid_feral.txt  custom_hunter_beast_mastery.txt  custom_hunter_marksmanship.txt  custom_hunter_survival.txt  custom_priest_shadow.txt  custom_profile.txt  custom_shaman_elemental.txt  custom_shaman_enhancement.txt  custom_warrior_arms.txt  custom_warrior_fury.txt  docker-compose.yml  fail.sh  pyproject.toml  requirements-dev.txt  requirements-test.txt  requirements.txt  setup.cfg  setup.py  success.sh
.github/workflows/: CD.yaml  CI.yaml
bloodytools/: 97d36b2f-8eb9-4979-b2fb-9678bc2f9d34.json  __main__.py  bloodytools.py  bloodytools_test.py  main.py  settings.py  special_cases.py
bloodytools/simulation_objecs/: simulation_objects.py  simulation_objects_tests.py
bloodytools/simulation_objects/: azerite_trait_simulation.py  azerite_trait_simulations.py  corruption_simulation.py  essence_combination_simulation.py  essence_simulation.py  secondary_distribution_simulation.py  simulation_objects.py  simulation_objects_tests.py  trinket_simulation.py
bloodytools/simulations/: __init__.py  conduit_simulation.py  conduit_simulator.py  consumable_simulator.py  simulator.py  (+29 more)
custom_profiles/: README.md
fallback_profiles/: README.md
qt_gui/: MainForm.ui.qml  MainForm.ui.qmlc  bloodytools.py  main.qml  main.qmlc  qml.qrc  qt_gui.pro  run.py
scripts/: analyze_talent_worths.py  collect_tier_data.py
tests/: test_all_simulations.py  test_simulation_objects_simulation_objects.py  test_utils_simulation_objects.py
versuch_zwei/: versuch_zwei.pro
(+204 files in other folders)
