[metadata]
name = bloodytools
author = Bloodmallet(EU)
author_email = bloodmalleteu@gmail.com
description = Allows multiple ways of automated data generation via SimulationCraft for World of Warcraft.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Bloodmallet/bloodytools
project_urls =
    Bug Tracker = https://github.com/Bloodmallet/bloodytools/issues
license = GNU GENERAL PUBLIC LICENSE
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
packages = find:
package_dir =
python_requires = >=3.8

[options.packages.find]
where =
exclude =
    test*

[options.package_data]
bloodytools = 
    fallback_profiles/*/*/*.simc
    py.typed
    *.yaml
    simulations/talent_tree_paths/*.yaml
